<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_6"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goods_name"
            android:textColor="@color/text_goods_name"
            android:textSize="@dimen/sp_20" />

        <EditText
            android:id="@+id/et_goods_name"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/goods_name_hint"
            android:inputType="text"
            android:maxLength="18" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_6"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goods_price"
            android:textColor="@color/text_goods_name"
            android:textSize="@dimen/sp_20" />

        <EditText
            android:id="@+id/et_goods_price"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/goods_price_hint"
            android:inputType="number"
            android:maxLength="7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_6"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goods_type"
            android:textColor="@color/text_goods_name"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:id="@+id/tv_goods_type"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/menu_household"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp_20" />

        <Button
            android:id="@+id/btn_goods_type"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:layout_weight="3"
            android:background="@drawable/selector_btn"
            android:gravity="center"
            android:text="@string/goods_type_check"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/text_color_hint" />

    <EditText
        android:id="@+id/et_goods_describe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:enabled="true"
        android:gravity="top"
        android:hint="@string/goods_describe"
        android:inputType="textMultiLine"
        android:maxLength="200"
        android:padding="@dimen/dp_5" />


</LinearLayout>
