<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/title_login" />

    <EditText
        android:id="@+id/et_username"
        style="@style/AppTheme.EditText.Big"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_31"
        android:background="@color/white"
        android:drawableLeft="@drawable/selector_ic_person"
        android:hint="@string/username"
        android:maxLength="20" />

    <EditText
        android:id="@+id/et_pwd"
        style="@style/AppTheme.EditText.Big"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_username"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_23"
        android:background="@color/white"
        android:drawableLeft="@drawable/selector_ic_lock"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/btn_login"
        style="@style/AppTheme.Button.EasyShop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_below="@+id/et_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_40"
        android:enabled="false"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn_login"
        android:layout_alignRight="@+id/btn_login"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/fast_register"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/sp_18" />


</RelativeLayout>
