<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/title_register" />

    <EditText
        android:id="@+id/et_username"
        style="@style/AppTheme.EditText.Big"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_31"
        android:background="@color/white"
        android:drawableLeft="@drawable/selector_ic_person"
        android:hint="@string/username"
        android:maxLength="20" />

    <EditText
        android:id="@+id/et_pwd"
        style="@style/AppTheme.EditText.Big"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@color/white"
        android:layout_alignEnd="@+id/et_username"
        android:layout_alignLeft="@+id/et_username"
        android:layout_alignRight="@+id/et_username"
        android:layout_alignStart="@+id/et_username"
        android:layout_below="@+id/et_username"
        android:layout_marginTop="@dimen/dp_6"
        android:drawableLeft="@drawable/selector_ic_lock"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_pwdAgain"
        style="@style/AppTheme.EditText.Big"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_alignEnd="@+id/et_pwd"
        android:layout_alignLeft="@+id/et_pwd"
        android:layout_alignRight="@+id/et_pwd"
        android:layout_alignStart="@+id/et_pwd"
        android:layout_below="@+id/et_pwd"
        android:layout_marginTop="@dimen/dp_6"
        android:background="@color/white"
        android:drawableLeft="@drawable/selector_ic_lock"
        android:hint="@string/pwd_again"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/btn_register"
        style="@style/AppTheme.Button.EasyShop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_58"
        android:layout_alignEnd="@+id/et_pwdAgain"
        android:layout_alignLeft="@+id/et_pwdAgain"
        android:layout_alignRight="@+id/et_pwdAgain"
        android:layout_alignStart="@+id/et_pwdAgain"
        android:layout_below="@+id/et_pwdAgain"
        android:layout_marginTop="@dimen/dp_40"
        android:enabled="false"
        android:text="@string/register" />


</RelativeLayout>
