<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/goods_details">

        <TextView
            android:id="@+id/tv_goods_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/goods_delete"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            android:visibility="gone" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout3"
        android:layout_below="@+id/toolbar"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_370"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <!--<me.relex.circleindicator.CircleIndicator-->
                <!--android:id="@+id/indicator"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="@dimen/dp_60"-->
                <!--android:layout_alignBottom="@+id/viewpager"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:layout_alignParentStart="true"-->
                <!--app:ci_drawable="@drawable/circle_indicator" />-->

            <include
                android:id="@+id/linearLayout2"
                layout="@layout/layout_goods_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/indicator" />

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_detail_message"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/btn_tell"
            android:text="@string/goods_detail_message"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_23"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_goods_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/goods_delete_master"
        android:textColor="@color/text_goods_name"
        android:textSize="@dimen/sp_20"
        android:visibility="gone" />

</RelativeLayout>
